--- a/css/landingpage.css
+++ b/css/landingpage.css
@@ -25,3 +25,13 @@ nav ul li{
     list-style: none;
     padding: 0px 5px;
 }
+nav ul li a{
+    color:white;
+    text-decoration: none;
+    border-radius: 5px
+}
+nav ul li a:hover{
+    background-color:rgb(31, 120, 246) ;
+    transition: 0.5s ease;
+}
+
