--- a/landingpage.css
+++ b/landingpage.css
@@ -5,7 +5,7 @@ body {
     background-size: cover;
 }
 h1 {
-    font-size: 50px;
+    font-size: 80px;
     color:rgb(31, 120, 246);
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-style: italic;
@@ -34,6 +34,9 @@ nav ul li a:hover{
     background-color:rgb(31, 120, 246) ;
     transition: 0.5s ease;
 }
+nav ul li .active{
+    background-color:rgb(31, 120, 246) ;
+}
 .article{
     text-align: center;
 }
@@ -46,3 +49,4 @@ nav ul li a:hover{
     text-align:center;
 
 }
+
